--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -658,7 +658,7 @@ figure.wp-block-pullquote {
     transition: background-color var(--transition-duration);
   }
 
-  a:first-child:last-child {
+  a:first-of-type:last-of-type {
     border-radius: var(--layout-border-radius-small);
   }
 }
