Improve compatibility with flex layout blocks

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -23,6 +23,10 @@
   }
 }
 
+:root .is-layout-flex > :is(*, div) {
+  margin: 0;
+}
+
 // =============================================================================
 // INLINE
 // =============================================================================
