--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -1,3 +1,7 @@
+.is-layout-flex > :where(.small-card-block, .article-card-block) {
+  flex: 1 1 auto;
+}
+
 .small-card-block,
 .article-card-block .pagination {
   margin-top: 2rem;
@@ -461,7 +465,7 @@
     display: flex;
     gap: 3px;
     color: var(--card-footer-color, var(--fg-700));
-    font-size: var(--card-footer-font-size, clamp(11.5px + var(--card-font-size-min-mod, 0px), 3cqw + var(--card-font-size-grow-mod, 0px), 13px + var(--card-font-size-max-mod, 0px)));
+    font-size: var(--card-footer-font-size, clamp(11.5px + var(--card-font-size-min-mod, 0px), 2.65cqw + var(--card-font-size-grow-mod, 0px), 13px + var(--card-font-size-max-mod, 0px)));
     line-height: 1;
     margin-top: var(--card-footer-margin-top, var(--this-spacing));
 
