Fix details block style

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -715,3 +715,13 @@ figure.wp-block-pullquote {
     margin-bottom: 0;
   }
 }
+
+// =============================================================================
+// DETAILS
+// =============================================================================
+
+.wp-block-details {
+  > * {
+    margin-block-start: 0;
+  }
+}
