--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -209,7 +209,9 @@
       }
     }
   }
+}
 
+:is(.main-navigation, .icon-menu) {
   .menu-item {
     position: relative;
     height: fit-content;
