--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -287,6 +287,7 @@
   --navigation-subitem-background-hover: var(--bg-300);
   --navigation-color: var(--fg-400);
   --navigation-color-hover: var(--fg-300);
+  --navigation-font-size: #{get_clamp(14, 16, 375, 768)};
   --navigation-subitem-divider: 1px solid var(--bg-700);
   --navigation-submenu-box-shadow: 0 4px 3px -2px rgb(0 0 0 / 30%);
   --navigation-drop-shadow: drop-shadow(0 3px 2px rgb(0 0 0 / 20%));
