--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -287,6 +287,7 @@ button[type=submit]:where(:not(._inline)),
 }
 
 .infobox {
+  clear: both;
   background: var(--infobox-background);
   color: var(--fg-600);
   border-radius: var(--layout-border-radius-small);
