--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -81,7 +81,9 @@
     position: relative;
     z-index: 1;
     padding-top: var(--page-inset-top);
+    max-width: 100%;
     contain: style;
+    container-type: inline-size;
 
     &._no-padding-top {
       padding-top: 0;
