--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -40,6 +40,10 @@
   --table-border-color-striped: var(--fg-950);
   --table-background-striped: hsl(var(--bg-950-free) / 6%);
 
+  --calendar-th-background: var(--bg-300);
+  --calendar-border-color: var(--bg-300);
+  --calendar-color: var(--fg-800);
+
   // --paragraph-spacing: 1.5rem;
   --blockquote-background: hsl(var(--bg-950-free) / 8%);
   // --placeholder-background: var(--bg-900);
