--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -133,6 +133,10 @@
   --table-border-color-striped: var(--fg-950);
   --table-background-striped: rgb(var(--dark-shade-rgb) / 15%);
 
+  --calendar-th-background: var(--bg-800);
+  --calendar-border-color: var(--bg-800);
+  --calendar-color: var(--fg-700);
+
   --paragraph-spacing: 1.5rem;
   --blockquote-background: rgb(var(--dark-shade-rgb) / 15%);
   --placeholder-background: var(--bg-900);
