Style category block

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -776,3 +776,12 @@ figure.wp-block-pullquote {
     }
   }
 }
+
+// =============================================================================
+// CATEGORIES
+// =============================================================================
+
+.wp-block-categories {
+  list-style-type: disc;
+  padding-left: 1.05em;
+}
