Add stylesheet for sidebar and widgets

--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -35,6 +35,7 @@
 @import '_profile';
 @import '_showcase';
 @import '_search';
+@import '_sidebar';
 
 @import '_notifications';
 @import '_lightbox';
