--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -129,22 +129,25 @@
     contain: paint;
   }
 
+  &__header,
+  &__title {
+    font-family: var(--ff-card-title);
+    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.765cqw + var(--card-font-size-grow-mod, 0px), 17px + var(--card-font-size-max-mod, 0px)));
+
+    @container (min-width: 640px) {
+      font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
+    }
+  }
+
   &__header {
     grid-area: head;
     display: flex;
     align-items: center;
     gap: .5em;
-
-    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
-
     margin: var(--this-spacing) var(--this-spacing) .75em var(--this-spacing); // Based on font-size
   }
 
   &__title {
-    font-family: var(--ff-card-title);
-
-    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
-
     &._with-delete {
       padding-right: 1.75em;
     }
