--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -132,7 +132,7 @@
   &__header,
   &__title {
     font-family: var(--ff-card-title);
-    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.765cqw + var(--card-font-size-grow-mod, 0px), 17px + var(--card-font-size-max-mod, 0px)));
+    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.8cqw + var(--card-font-size-grow-mod, 0px), 16.5px + var(--card-font-size-max-mod, 0px)));
 
     @container (min-width: 640px) {
       font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
@@ -329,9 +329,13 @@
   }
 
   &__content {
-    font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 15px + var(--card-font-size-max-mod, 0px)));
+    font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 14px + var(--card-font-size-max-mod, 0px)));
     line-height: var(--card-line-height, 1.45);
     overflow-wrap: break-word;
+
+    @container (min-width: 640px) {
+      font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 15px + var(--card-font-size-max-mod, 0px)));
+    }
 
     &._small {
       line-height: var(--small-card-line-height, 1.45);
