--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -785,3 +785,107 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
   list-style-type: disc;
   padding-left: 1.05em;
 }
+
+// =============================================================================
+// LATEST POSTS
+// =============================================================================
+
+.wp-block-latest-posts:where(:not(.no-theme-style)) {
+  --this-row-gap: calc(var(--grid-columns-row-gap, 1.5rem) * var(--grid-columns-row-gap-multiplier, 1));
+  --this-col-gap: calc(var(--grid-columns-col-gap, 1.5rem) * var(--grid-columns-col-gap-multiplier, 1));
+  gap: var(--this-row-gap) var(--this-col-gap);
+
+  &.has-background {
+    padding: var(--this-col-gap) var(--this-row-gap);
+  }
+
+  &.has-link-color {
+    * {
+      color: inherit !important;
+    }
+  }
+
+  &.is-grid {
+    display: grid;
+
+    li {
+      margin: 0;
+      width: 100%;
+    }
+  }
+
+  &.columns-2  {
+    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - var(--this-col-gap)) / 2)), 1fr));
+  }
+
+  &.columns-3  {
+    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - 2 * var(--this-col-gap)) / 3)), 1fr));
+  }
+
+  &.columns-4  {
+    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - 3 * var(--this-col-gap)) / 4)), 1fr));
+  }
+
+  &.columns-5  {
+    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - 4 * var(--this-col-gap)) / 5)), 1fr));
+  }
+
+  &:not(.is-grid) {
+    display: flex;
+    flex-direction: column;
+  }
+
+  li {
+    flex: 1 1 auto;
+    background-color: var(--card-bg-color);
+    padding: min(var(--card-body-container-padding, clamp(0.75rem, 3.25cqw, 1.25rem)), 16px);
+    margin: 0;
+    border-radius: var(--layout-border-radius-small);
+    max-width: calc(100vw - 20px);
+    min-width: 0;
+    width: 100%;
+    box-shadow: var(--card-box-shadow, var(--box-shadow-m));
+    contain: style layout; // Improve performance
+    container-type: inline-size; // Enable container query units
+
+    > * {
+      font-family: var(--ff-card-body);
+      font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 15px + var(--card-font-size-max-mod, 0px)));
+      line-height: var(--card-line-height, 1.45);
+      overflow-wrap: break-word;
+    }
+  }
+
+  .wp-block-latest-posts__post-title:is(a) {
+    grid-area: title;
+    display: inline-block;
+    color: var(--card-heading-link, var(--heading-link-color));
+    font: var(--font-weight-heading) 1em/1.3 var(--ff-card-title);
+    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.765cqw + var(--card-font-size-grow-mod, 0px), 17px + var(--card-font-size-max-mod, 0px)));
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    overflow: hidden;
+
+    @container (min-width: 640px) {
+      font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
+    }
+
+    &:hover {
+      color: var(--card-heading-link-hover, var(--heading-link-color-hover));
+    }
+  }
+
+  :is(.wp-block-latest-posts__post-author, .wp-block-latest-posts__post-date) {
+    color: var(--fg-800);
+  }
+
+  .wp-block-latest-posts__post-excerpt {
+    margin-top: 0.4em;
+    margin-bottom: 0;
+  }
+
+  .wp-block-latest-posts__featured-image {
+    display: none;
+  }
+}
