--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -791,8 +791,8 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
 // =============================================================================
 
 .wp-block-latest-posts:where(:not(.no-theme-style)) {
-  --this-row-gap: calc(var(--grid-columns-row-gap, 1.5rem) * var(--grid-columns-row-gap-multiplier, 1));
-  --this-col-gap: calc(var(--grid-columns-col-gap, 1.5rem) * var(--grid-columns-col-gap-multiplier, 1));
+  --this-row-gap: calc(var(--grid-columns-row-gap, 1.5rem) * var(--grid-columns-row-gap-multiplier, 1) + .5rem);
+  --this-col-gap: calc(var(--grid-columns-col-gap, 1.5rem) * var(--grid-columns-col-gap-multiplier, 1) + .5rem);
   gap: var(--this-row-gap) var(--this-col-gap);
 
   &.has-background {
@@ -815,19 +815,19 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
   }
 
   &.columns-2  {
-    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - var(--this-col-gap)) / 2)), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(max(165px, calc((100% - var(--this-col-gap)) / 2)), 1fr));
   }
 
   &.columns-3  {
-    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - 2 * var(--this-col-gap)) / 3)), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(max(165px, calc((100% - 2 * var(--this-col-gap)) / 3)), 1fr));
   }
 
   &.columns-4  {
-    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - 3 * var(--this-col-gap)) / 4)), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(max(165px, calc((100% - 3 * var(--this-col-gap)) / 4)), 1fr));
   }
 
   &.columns-5  {
-    grid-template-columns: repeat(auto-fill, minmax(max(190px, calc((100% - 4 * var(--this-col-gap)) / 5)), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(max(165px, calc((100% - 4 * var(--this-col-gap)) / 5)), 1fr));
   }
 
   &:not(.is-grid) {
@@ -835,16 +835,25 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
     flex-direction: column;
   }
 
+  &.has-dates.has-author {
+    .wp-block-latest-posts__post-author {
+      &::after {
+        content: '\2022';
+        font-family: var(--ff-base);
+        margin: 0 .35rem;
+        opacity: .9;
+      }
+    }
+  }
+
   li {
     flex: 1 1 auto;
-    background-color: var(--card-bg-color);
-    padding: min(var(--card-body-container-padding, clamp(0.75rem, 3.25cqw, 1.25rem)), 16px);
+    display: flex;
+    flex-wrap: wrap;
     margin: 0;
-    border-radius: var(--layout-border-radius-small);
     max-width: calc(100vw - 20px);
     min-width: 0;
     width: 100%;
-    box-shadow: var(--card-box-shadow, var(--box-shadow-m));
     contain: style layout; // Improve performance
     container-type: inline-size; // Enable container query units
 
@@ -857,7 +866,7 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
   }
 
   .wp-block-latest-posts__post-title:is(a) {
-    grid-area: title;
+    flex: 1 1 100%;
     display: inline-block;
     color: var(--card-heading-link, var(--heading-link-color));
     font: var(--font-weight-heading) 1em/1.3 var(--ff-card-title);
@@ -871,18 +880,25 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
       font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
     }
 
+    &:not(:last-child) {
+      margin-bottom: .4rem;
+    }
+
     &:hover {
       color: var(--card-heading-link-hover, var(--heading-link-color-hover));
     }
   }
 
   :is(.wp-block-latest-posts__post-author, .wp-block-latest-posts__post-date) {
+    flex: 0 1 auto;
     color: var(--fg-800);
   }
 
   .wp-block-latest-posts__post-excerpt {
-    margin-top: 0.4em;
+    flex: 1 1 100%;
+    margin-top: 0.4rem;
     margin-bottom: 0;
+    height: 100%;
   }
 
   .wp-block-latest-posts__featured-image {
