Add missing link style to categories and meta widgets

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -784,6 +784,12 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
 .wp-block-categories:where(:not(.no-theme-style)) {
   list-style-type: disc;
   padding-left: 1.05em;
+
+  a {
+    &:hover {
+      color: var(--inline-link-color-hover);
+    }
+  }
 }
 
 // =============================================================================
