Update widget link colors

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -17,5 +17,13 @@
     list-style-type: disc;
     padding-left: 1.05em;
   }
+
+  a {
+    color: var(--widget-link-color);
+
+    &:hover {
+      color: var(--widget-link-color-hover);
+    }
+  }
 }
 
