--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ License URI: http://www.gnu.org/licenses/gpl.html
 Requires at least: 6.1.0
 Tested up to: 6.6.1
 Requires PHP: 7.4
-Version: 5.22.0-beta2
+Version: 5.22.0-beta3
 Text Domain: fictioneer
 
 Description: Standalone solution for publishing and reading web fictions.
 
-Tags: one-column, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, theme-options, threaded-comments, blog, translation-ready
+Tags: one-column, two-column, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, theme-options, threaded-comments, blog, translation-ready
 
 Fictioneer WordPress Theme, (C) 2023 Tetrakern
 Fictioneer is distributed under the terms of the GNU GPL.
