--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -730,6 +730,8 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
 // =============================================================================
 
 .wp-block-calendar:where(:not(.no-theme-style)) {
+  float: none !important;
+  text-align: center;
   container-type: inline-size;
 
   :is(.wp-calendar-table, .wp-calendar-nav) {
@@ -743,6 +745,8 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
   :is(th, td) {
     font-size: inherit;
     text-align: center;
+    padding: .25em;
+    border: 1px solid;
   }
 
   th {
@@ -764,9 +768,18 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
     }
   }
 
+  .wp-calendar-table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
   .wp-calendar-nav {
     color: var(--calendar-color);
     padding-top: .25em;
+
+    i {
+      opacity: .8;
+    }
 
     a {
       color: var(--widget-link-color);
@@ -803,6 +816,7 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
   --this-row-gap: calc(var(--grid-columns-row-gap, 1.5rem) * var(--grid-columns-row-gap-multiplier, 1) + .5rem);
   --this-col-gap: calc(var(--grid-columns-col-gap, 1.5rem) * var(--grid-columns-col-gap-multiplier, 1) + .5rem);
   gap: var(--this-row-gap) var(--this-col-gap);
+  padding-left: 0;
 
   &.has-background {
     padding: var(--this-col-gap) var(--this-row-gap);
@@ -867,9 +881,9 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
     container-type: inline-size; // Enable container query units
 
     > * {
-      font-family: var(--ff-card-body);
-      font-size: var(--card-content-font-size, clamp(13.5px + var(--card-font-size-min-mod, 0px), 3.125cqw + var(--card-font-size-grow-mod, 0px), 15px + var(--card-font-size-max-mod, 0px)));
-      line-height: var(--card-line-height, 1.45);
+      font-family: var(--ff-note);
+      font-size: var(--block-latest-posts-content-font-size, clamp(13.5px, 3.125cqw, 15px));
+      line-height: var(--block-latest-posts-line-height, 1.45);
       overflow-wrap: break-word;
     }
   }
@@ -877,16 +891,16 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
   .wp-block-latest-posts__post-title:is(a) {
     flex: 1 1 100%;
     display: inline-block;
-    color: var(--card-heading-link, var(--heading-link-color));
-    font: var(--font-weight-heading) 1em/1.3 var(--ff-card-title);
-    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.765cqw + var(--card-font-size-grow-mod, 0px), 17px + var(--card-font-size-max-mod, 0px)));
+    color: var(--heading-link-color);
+    font: var(--font-weight-heading) 1em/1.3 var(--ff-heading);
+    font-size: var(--block-latest-posts-title-font-size, clamp(15px, 3.765cqw, 17px));
     white-space: nowrap;
     text-overflow: ellipsis;
     max-width: 100%;
     overflow: hidden;
 
     @container (min-width: 640px) {
-      font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
+      font-size: var(--block-latest-posts-title-font-size, clamp(15px, 3.065cqw, 18px));
     }
 
     &:not(:last-child) {
@@ -894,7 +908,7 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
     }
 
     &:hover {
-      color: var(--card-heading-link-hover, var(--heading-link-color-hover));
+      color: var(--heading-link-color-hover);
     }
   }
 
@@ -957,5 +971,74 @@ figure.wp-block-pullquote:where(:not(.no-theme-style)) {
       align-items: center;
       gap: 8px;
     }
+  }
+}
+
+// =============================================================================
+// LATEST COMMENTS
+// =============================================================================
+
+.wp-block-latest-comments:where(:not(.no-theme-style)) {
+  list-style: none;
+  padding-left: 0;
+
+  article {
+    display: inline;
+    font-family: var(--ff-card-body);
+  }
+
+  a {
+    color: var(--widget-link-color);
+
+    &:hover {
+      color: var(--widget-link-color-hover);
+    }
+  }
+
+  &.has-avatars .wp-block-latest-comments__comment {
+    min-height: 40px;
+  }
+
+  .wp-block-latest-comments__comment {
+    position: relative;
+    margin-bottom: 0;
+
+    &:where(:not(:last-child)) {
+      margin-bottom: 1rem;
+    }
+  }
+
+  .wp-block-latest-comments__comment-avatar {
+    float: left;
+    margin: 3px 8px 4px 0;
+    border-radius: var(--layout-border-radius-small);
+    height: 32px;
+    width: 32px;
+  }
+
+  .wp-block-latest-comments__comment-meta {
+    font-size: 13.5px;
+    font-weight: var(--font-weight-semi-strong);
+    line-height: 1.3;
+    margin-left: 0 !important;
+  }
+
+  .wp-block-latest-comments__comment-excerpt {
+    margin-top: .3rem;
+    margin-left: 0 !important;
+
+    p {
+      font-size: 13.5px;
+      line-height: 1.45;
+      margin: 0;
+    }
+  }
+
+  .wp-block-latest-comments__comment-date {
+    display: block;
+    color: var(--fg-800);
+    font-size: 13px;
+    font-weight: var(--font-weight-normal);
+    margin: .3rem 0;
   }
 }
