--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -280,6 +280,9 @@
   // --inline-link-color-border: 1px solid transparent;
   // --inline-link-color-border-hover: 1px solid currentColor;
 
+  // --widget-link-color: inherit;
+  --widget-link-color-hover: var(--fg-300);
+
   // === COLORS - BOOKMARKS ====================================================
 
   --bookmark-color-alpha: #9ca3b0; // BG-500
