--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -13,7 +13,6 @@
   // === CONFIGURATION =========================================================
 
   --site-width: #{$full-width}px; // Overridden by theme customizer
-  --sidebar-width: 256px;
   --lightness-offset: 0; // Overridden by theme customizer
   --darken: (1 + var(--lightness-offset));
   --saturation-offset: 0; // Overridden by theme customizer
@@ -33,6 +32,11 @@
   @include bp(desktop) {
     --navigation-height: 40px;
   }
+
+  // === SIDEBAR ===============================================================
+
+  --sidebar-width: 256px; // Overridden by theme customizer
+  --sidebar-gap: 3rem; // Overridden by theme customizer
 
   // === FONT FAMILIES =========================================================
 
@@ -244,6 +248,7 @@
   --layout-hr-dots-color: var(--bg-200);
   --layout-hr-border: 2px solid var(--hr-border-color, var(--layout-lineart-color));
   --layout-hr-border-dashed: 2px dashed var(--hr-border-color, var(--layout-lineart-color));
+  --layout-widget-spacing: 2rem;
 
   // === MINIMAL ===============================================================
 
