--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -581,9 +581,17 @@ body {
     }
   }
 
-  // ==============================================================================
+  // =============================================================================
+  // CALENDAR
+  // =============================================================================
+
+  .wp-block-calendar:where(:not(.no-theme-style)) {
+    float: none !important;
+  }
+
+  // =============================================================================
   // LATEST POSTS
-  // ==============================================================================
+  // =============================================================================
 
   .wp-block-latest-posts:where(:not(.no-theme-style)) {
     --this-row-gap: 32px;
@@ -696,6 +704,63 @@ body {
 
     .wp-block-latest-posts__featured-image {
       display: none;
+    }
+  }
+
+  // =============================================================================
+  // LATEST COMMENTS
+  // =============================================================================
+
+  .wp-block-latest-comments:where(:not(.no-theme-style)) {
+    list-style: none;
+    padding-left: 0 !important;
+
+    article {
+      display: inline;
+    }
+
+    &.has-avatars .wp-block-latest-comments__comment {
+      min-height: 40px;
+    }
+
+    .wp-block-latest-comments__comment {
+      position: relative;
+      margin-bottom: 0;
+
+      &:where(:not(:last-child)) {
+        margin-bottom: 16px;
+      }
+    }
+
+    .wp-block-latest-comments__comment-avatar {
+      float: left;
+      margin: 3px 8px 4px 0;
+      border-radius: 2px;
+      height: 32px;
+      width: 32px;
+    }
+
+    .wp-block-latest-comments__comment-meta {
+      font-size: 13.5px;
+      line-height: 1.3;
+      margin-left: 0 !important;
+    }
+
+    .wp-block-latest-comments__comment-excerpt {
+      margin-top: 6px;
+      margin-left: 0 !important;
+
+      p {
+        font-size: 13.5px;
+        line-height: 1.45;
+        margin: 0;
+      }
+    }
+
+    .wp-block-latest-comments__comment-date {
+      display: block;
+      font-size: 13px;
+      margin: 6px 0;
     }
   }
 
